more better fixes to bg alignment and mobile scrolling

--- a/_sass/_site-sub-header.scss
+++ b/_sass/_site-sub-header.scss
@@ -2,7 +2,7 @@
     //height of the background images;
     // inital state is large.
     height: 645px;
-    background-position: middle center;
+    background-position: center center;
     background-repeat: no-repeat;
     background-color: $background-color-inverse;
     position: fixed;
